# autobackup-manager

./: .gitignore  AutoBackupManager.spec  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/autobackup/: backup_engine.py  config.py  db.py  gui.py  main.py  models.py  scheduler.py
src/autobackup_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
